Fix Content With Menu
To prevent overlapping content.

--- a/src/components/Content/index.css
+++ b/src/components/Content/index.css
@@ -1,5 +1,5 @@
 /** @define Content; */
 
 .Content {
-  margin-top: 2rem;
+  margin-top: 1.75rem;
 }
